* pa_appid-enabler | introduce class APPIDENABLER extend UTIL - make use of it in pa_appid-enabler - to support PAN-OS-PHP API in the future
* pa_config-size | introduce class CONFIGSIZE extend UTIL - make us in pa_config-size and prepare for future API usage
* pa_bpa-generator - introduce class BPAGENERATOR - make use of it in pa_bpa-generator

BUGFIX:
* pa_securityprofile-edit | bugfix to handle JSON output for shared and other DG/VSYS correctly

GENERAL:
* framework | finalise renaming to PAN-OS-PHP


2.0.14 (20211010)
UTILS:
* merger script extend for JSON output
* API | introduce POST to send XML file directly to PAN-OS-PHP API
* API and API-UI | improvments
* pa_application-edit | introduce 'filter=(tcp has XYZ)' / 'filter=(udp has XYZ)'
* all script actions=exportToExcel - for PAN-OS-API usage, specify project/html folder as file destination storage
* API extend JSON file with application and threat action/filter

BUGFIX:
* class SecurityProfileGroup | bugfix for SaasSecurityProfileStore
* pa_rule-edit | bugfix for 'filter=(user.count XYZ)'
* pa_rule-edit | bugfix for resolveapplicationsummary shadow-json
* pa_rule-edit | bugfix for shadow-json to display from/to zone
* pa_rule-edit actions=display shadow-json | bugfix for SRC/DST if any for resolveAddressSummary
* pa_rule-edit actions=display:resolveservicesummary shadow-json | bugfix to display service resolve correctly
* pa_rule-edit actions=exporttoexcel:FILE.html,ResolveApplicationsummary | bugfix to display app-id resolvesummary correctly

GENERAL:


2.0.13 (20211004)
UTILS:
* pa_rule-edit actions=display:ResolveAddressSummary|ResolveServiceSummary introduce summary output if argument shadow-json is used
* pa_rule-edit introduce additionalargument 'ResolveApplicationSummary' for actions=display:ResolveApplicationSummary and actions=exporttoexcel:file,ResolveApplicationSummary
* pa_rule-edit - add array keys for actions=display:ResolveApplicationSummary
* apigui - add example in error output